sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:10: error: value &&! is not a member of Boolean
    while(j>0 &&!plusPetitQue(j,v)  ){
              ^